--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,10 @@ body {
     background-color: #303030;
 }
 
+h3 {
+    font-weight: 400;
+}
+
 .wrapper-index {
     font-family: 'Lato', Arial, Helvetica, sans-serif;
     display: flex;
