--- a/src/styles/resume/card-skill.scss
+++ b/src/styles/resume/card-skill.scss
@@ -5,4 +5,9 @@
     grid-gap: .4em;
     align-content: flex-start;
     border: 1px solid;
+
+    h3 {
+        font-size: 1em;
+        margin-bottom: 0;
+    }
 }
