--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,11 +11,12 @@ h3 {
     // display: grid;
     grid-template-columns: 1fr 4fr; //repeat(2, 1fr);
     // flex-direction: column;
-    // justify-content: center;
+    justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-color: #fff;
     color: #000;
+    padding-top: 3em;
 
     header {
         display: flex;
@@ -27,7 +28,7 @@ h3 {
 
         .header-name {
             padding: .4em 2em;
-            max-width: 48em;
+            max-width: 64em;
             width: 100%;
             margin: auto;
             text-align: left;
