--- a/src/styles/resume/job.scss
+++ b/src/styles/resume/job.scss
@@ -1,3 +1,22 @@
 .job {
-    
+    h2, h3, h4 {
+        margin: .2em 0;
+    }
+
+    h3 {
+        font-size: 1.2em;
+    }
+
+    h4 {
+        font-size: 1em;
+    }
+
+    ul {
+        font-size: .9em;
+        margin: 0;
+        li {
+            list-style: none;
+            margin: 0;
+        }
+    }
 }
