--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,8 +15,16 @@ h3 {
     align-items: center;
     min-height: 100vh;
     background-color: #fff;
-    color: #000;
-    padding-top: 3em;
+    // color: #000;
+    transition: background-color 300ms ease-out;
+
+    &.is-business-card {
+        background: #303030;
+    }
+
+    &.is-resume {
+        background-color: #fff;
+    }
 
     header {
         display: flex;
@@ -25,14 +33,34 @@ h3 {
         color: #fff;
         width: 100%;
         text-transform: uppercase;
-
-        .header-name {
+        
+        .header-content {
+            // display: grid;
             padding: .4em 2em;
+            // grid-template-columns: 400px 1fr;
+            display: flex;
+            display: none;
             max-width: 64em;
             width: 100%;
             margin: auto;
-            text-align: left;
-            z-index: 1;
+            opacity: 0;
+            transition: opacity 100ms ease 100ms;
+
+            .header-content-name {
+                text-align: left;
+                z-index: 1;
+                flex: 1 0 auto;
+                font-size: 1em;
+            }
+
+            &.has-mounted {
+                opacity: 1;
+                display: flex;
+            }
+
+            &.has-mounted + .header-background {
+                left: 0;
+            }
         }
 
         .header-background {
@@ -42,25 +70,23 @@ h3 {
             height: 100%;
             left: -100%;
             transition: left 500ms ease-in-out;
+            z-index: -1;
 
-            &.has-mounted {
-                left: 0;
-            }
+        }
+
+       
+
+       
+
+        a {
+            z-index: 10;
+            color: #fff;
+            text-decoration: none;
+            text-transform: none;
+            font-size: .8em;
         }
     }
 
-
-    .site-title {
-        font-size: 4em;
-        text-transform: uppercase;
-        font-weight: 800;
-        line-height: 1;
-        padding: .6em;
-        margin-top: 2em; 
-        background-color: #06c;
-        color: #fff;
-
-    }
 
     .site-blog {
 
