--- a/src/styles/resume/section-box.scss
+++ b/src/styles/resume/section-box.scss
@@ -3,8 +3,11 @@
     max-width: 64em;
     padding: 1em 1em;
     margin: 0em auto;
-    background-color: #fff;
+    // background-color: #fff;
     color: #000;
+    opacity: 0;
+    margin-top: 1em;
+    transition: opacity 500ms ease, margin-top 500ms ease;
 
     h2 {
         color: #000;
@@ -14,6 +17,7 @@
         padding: .4em;
         margin: .4em 0;
     }
+
 
 
     &.section-skill {
@@ -34,4 +38,15 @@
             grid-column: span 2 / auto;
         }
     }
+
+
+    .is-business-card & {
+        color: #fff;
+    }
+
+    &.in-viewport {
+        opacity: 1;
+        margin-top: 0;
+    }
+
 }
