--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,34 +24,75 @@ h3 {
 
     &.is-resume {
         background-color: #fff;
+
+        header {
+            
+        }
     }
 
     header {
         display: flex;
         position: fixed;
-        top: 0;
+        // top: 0;
         color: #fff;
         width: 100%;
         text-transform: uppercase;
+
+        // business card
+        position: relative;
+        max-width: 32em;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        transition: max-width 500ms ease-in-out;
+        // margin-bottom: 3em;
+
+
+        &.is-fixed {
+            position: fixed;
+            max-width: 100%;
+            top: 0;
+            // left: 0;
+
+            .header-content-name {
+                padding: .8em 2em;
+                font-size: 1em;
+                text-align: left;
+                max-width: 64em;
+                line-height: 1em;
+            }
+        }
         
+        .header-content-name {
+            text-align: left;
+            z-index: 1;
+            flex: 1 0 auto;
+            font-size: 1em;
+            margin: 0;
+
+            // business card
+            font-size: 3em;
+            line-height: 3em;
+            text-align: center;
+            // padding: 1em 0;
+            // transition: padding 300ms ease-in-out, font-size 300ms ease;
+            transition: line-height 300ms ease-in-out, font-size 300ms ease;
+        }
+
+
         .header-content {
             // display: grid;
             padding: .4em 2em;
             // grid-template-columns: 400px 1fr;
             display: flex;
-            display: none;
+            // display: none;
             max-width: 64em;
             width: 100%;
             margin: auto;
-            opacity: 0;
+            // opacity: 0;
             transition: opacity 100ms ease 100ms;
 
-            .header-content-name {
-                text-align: left;
-                z-index: 1;
-                flex: 1 0 auto;
-                font-size: 1em;
-            }
+            
 
             &.has-mounted {
                 opacity: 1;
@@ -68,11 +109,30 @@ h3 {
             background-color: #06c;
             width: 100%;
             height: 100%;
-            left: -100%;
-            transition: left 500ms ease-in-out;
-            z-index: -1;
+            // left: -100%;
+            // transition: left 300ms ease-in-out;
+            // z-index: -1;
 
         }
+
+        + h3 {
+            margin-top: 2em;
+            transition: margin-top 300ms ease;
+        }
+     
+        &.is-fixed  + h3 {
+            color: pink;
+            margin-top: 4em;
+        }
+
+        // & + .header-wrapper {
+        //     height: 0;
+        //     transition: height 300ms ease;
+        // }
+
+        // &.is-fixed + .header-wrapper {
+        //     height: 162px;
+        // }
 
        
 
@@ -84,6 +144,10 @@ h3 {
             text-decoration: none;
             text-transform: none;
             font-size: .8em;
+
+            //
+            display: none;
+
         }
     }
 
