--- a/src/styles/resume/job.scss
+++ b/src/styles/resume/job.scss
@@ -7,7 +7,6 @@
 
     h3 {
         font-size: 1.2em;
-        margin-top: .8em; 
     }
 
     h4 {
@@ -38,6 +37,12 @@
         right: 0;
     }
 }
+.section-jobs-media {
+    h3 {
+        margin-top: .8em; 
+    }
+}
+
 
 
 .section-education {
