--- a/src/styles/business-card.scss
+++ b/src/styles/business-card.scss
@@ -35,6 +35,9 @@
         position: absolute;
         bottom: 10vh;
         cursor: pointer;
+        opacity: 1;
+        transition: 600ms opacity;
+
 
         &:hover {
             color:#80b2e6;
@@ -60,12 +63,31 @@
             border-right: 1em solid transparent;
             border-top: .6em solid #fff;     
 
-            transition: 300ms transform;
+            transition: 300ms transform, 400ms opacity;
+            opacity: 1;
             
         }
     }
 
     
+}
+
+.is-resume {
+    .nav-to-resume {
+        position: absolute;
+        bottom: 10vh;
+        cursor: pointer;
+
+        opacity: 0;
+
+     
+        .arrow-down:after {
+            margin-top: .4em; 
+            border-top: .6em solid #fff;
+            transform: scale(20);
+            opacity: 0;
+        }
+    }
 }
 
 
