--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,11 @@
+// html, body {
+//     box-sizing: border-box;
+//     * {
+//         box-sizing: inherit;
+//     }
+// }
+
+
 body {
     background-color: #303030;
 
@@ -63,12 +71,29 @@ h3 {
             top: 0;
             // left: 0;
 
-            .header-content-name {
-                padding: .8em 2em;
-                font-size: 1em;
-                text-align: left;
+            .header-content {
+                display: flex;
                 max-width: 64em;
+                width: 100%;
+                
+                &-name {
+                    font-size: 1em;
+                    padding: .8em 0;
+                    line-height: 1em;
+                    text-align: left;
+                }
+
+                @media (max-width: 64em) {
+                    padding: .4em .8em;
+                }
+            }
+
+
+
+            a {
+                display: block;
                 line-height: 1em;
+                padding: .8em 0;
             }
         }
         
@@ -83,22 +108,18 @@ h3 {
             font-size: 3em;
             line-height: 3em;
             text-align: center;
-            // padding: 1em 0;
-            // transition: padding 300ms ease-in-out, font-size 300ms ease;
+          
             transition: line-height 300ms ease-in-out, font-size 300ms ease;
         }
 
 
         .header-content {
-            // display: grid;
-            padding: .4em 2em;
-            // grid-template-columns: 400px 1fr;
+            padding: .4em .4em;
             display: flex;
-            // display: none;
             max-width: 64em;
             width: 100%;
             margin: auto;
-            // opacity: 0;
+
             transition: opacity 100ms ease 100ms;
 
             
@@ -118,10 +139,6 @@ h3 {
             background-color: #06c;
             width: 100%;
             height: 100%;
-            // left: -100%;
-            // transition: left 300ms ease-in-out;
-            // z-index: -1;
-
         }
 
         + h3 {
