--- a/src/styles/resume/section-box.scss
+++ b/src/styles/resume/section-box.scss
@@ -1,7 +1,7 @@
 .section-box {
     width: 100%;
-    max-width: 60em;
-    padding: 1em 1em;
+    max-width: 64em;
+    padding: 1em 0;
     margin: 0em auto;
     overflow: hidden;
     // background-color: #fff;
