--- a/src/styles/resume/item-skill.scss
+++ b/src/styles/resume/item-skill.scss
@@ -1,15 +1,21 @@
 @import '../variables.scss';
 
+// .item-skill {
+//     display: flex;
+//     background-color: $color-blue-secondary;
+//     color: #000;
+//     padding: 0 .4em;
+//     font-size: .7em;
+//     width: 8em;
+//     height: 2.4em;
+//     margin: auto;
+//     text-align: center;
+//     justify-content: center;
+//     align-items: center
+// }
+
+
 .item-skill {
-    display: flex;
-    background-color: $color-blue-secondary;
-    color: #000;
-    padding: 0 .4em;
-    font-size: .7em;
-    width: 8em;
-    height: 2.4em;
-    margin: auto;
-    text-align: center;
-    justify-content: center;
-    align-items: center
+    font-size: .9em;
+    padding-left: .5em;
 }
