--- a/src/styles/resume/section-box.scss
+++ b/src/styles/resume/section-box.scss
@@ -9,17 +9,33 @@
     opacity: 0;
     margin-top: 1em;
     transition: opacity 500ms ease, margin-top 500ms ease;
+    @media (max-width: 375px) {
+        font-size: .9em;
+    }
 
     h2 {
         background-color: #303030;
         color: #fff;
         font-weight: 400;
         font-size: 1.2em;
-        padding: 1em .4em;
+        padding: 1em;
         // padding-left: 0;
         margin: .4em 0;
 
         // transition: 300ms padding-left ease;
+    }
+
+    @media (max-width: 60em) {
+        // div {
+        //     // margin: 0 1em; // improve this
+        //     margin-left: 1em;
+        //     margin-right: 1em;
+        // }
+
+        .job {
+            margin-left: 1em;
+            margin-right: 1em;
+        }
     }
 
 
@@ -27,9 +43,18 @@
     &.section-skill {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-gap: 1em;
+        // grid-gap: 1em;
         h2 {
             grid-column: span 5 / auto;
+
+            @media (max-width: 640px) {
+                grid-column: span 2 / auto;
+            }
+        }
+
+
+        @media (max-width: 640px) {
+            grid-template-columns: repeat(2, 1fr);
         }
         
     }
@@ -42,8 +67,13 @@
             grid-column: span 3 / auto;
         }
 
-        @media (max-width: 420px) {
+        @media (max-width: 768px) {
+            grid-column-gap: 2em;
+        }
+
+        @media (max-width: 680px) {
             grid-template-columns: 1fr;
+
 
             h2 {
                 grid-column: auto;
